--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO=mongodb+srv://joshuaimperial1010_db_user:GR06SQh06R0unJ6N@siomaiyan.nk3skcr.mongodb.net/siomaiyan
+MONGO=mongodb+srv://siomaiyan_db_user:Siomaiyan0202@siomaiyan.703exus.mongodb.net/?retryWrites=true&w=majority&appName=siomaiyan
