--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.18.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
