--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.1",
     "react": "^19.1.1",
